--- a/hugo.toml
+++ b/hugo.toml
@@ -58,10 +58,11 @@ theme = "adritian-free-hugo-theme"
         name = 'Portfolio'
         URL = '#portfolio'
         weight = 3
-      #  [[languages.en.menus.header]]
-      #  name = "Experience"
-      #  URL = "#experience"
-      #  weight = 4
+        
+        [[languages.en.menus.header]]
+        name = "Experience"
+        URL = "#experience"
+        weight = 4
 
       [[languages.en.menus.header]]
         name = "Projects"
