--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.williamarnberg.com"
+baseURL = "https://williamarnberg.com"
 languageCode = "en"
 theme = "adritian-free-hugo-theme"
 
