--- a/themes/adritian-free-hugo-theme/data/homepage.yml
+++ b/themes/adritian-free-hugo-theme/data/homepage.yml
@@ -20,8 +20,6 @@ showcase:
     - icon: "square-github"
       URL: "https://github.com/WilliamArnberg"
 
-    - icon: "square-facebook"
-      URL: "https://www.facebook.com/zetxek/"
 
 # about
 about:
@@ -35,7 +33,7 @@ about:
 
 # education
 education:
-  enable: true
+  enable: false
   items:
     - university: "The Game Assembly"
       year: "2012-2017"
@@ -58,7 +56,7 @@ experience:
     ## the url and text are localized, fill them in the i18n file
     ## keys: experience_button2, experience_button_url2 
   button3:
-    enable: true
+    enable: 
     icon: "icon-cloud-arrow-down"
     ## the url and text are localized, fill them in the i18n file
     ## keys: experience_button2, experience_button_url2 
