--- a/hugo.toml
+++ b/hugo.toml
@@ -66,7 +66,7 @@ theme = "adritian-free-hugo-theme"
 
       [[languages.en.menus.header]]
         name = "Projects"
-        URL = "/articles"
+        URL = "https://williamarnberg.com/articles/"
         weight = 5
 
       [[languages.en.menus.header]]
